@@ -26,7 +26,9 @@
 					{/if}
 					<div class="form-group">
 						<label for="subject" class="font-weight-bold">{trans("Subject:")}</label>
-						<input type="text" name="helpdesk[subject]" id="subject" value="{$helpdesk.subject}" {userpaneltip class="form-control" text="Enter request subject" trigger="subject"} placeholder="{trans("Enter request subject")}" required />
+						<input type="text" name="helpdesk[subject]" id="subject" value="{$helpdesk.subject}"
+								maxlength="{ConfigHelper::getConfig('rt.subject_max_length', 50)}"
+								{userpaneltip class="form-control" text="Enter request subject" trigger="subject"} placeholder="{trans("Enter request subject")}" required />
 					</div>
 
 					<div class="form-group">
